# ForgeDB

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
crates/auth/: Cargo.toml
crates/auth/src/: keys.rs  lib.rs  middleware.rs  token.rs
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  lib.rs  tui.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  listener.rs  wire.rs
crates/query/: Cargo.toml
crates/query/src/: context.rs  introspect.rs  lib.rs  policy.rs  schema.rs
crates/security/: Cargo.toml
crates/security/src/: certgen.rs  cursor.rs  lib.rs  tls.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  auth.rs  auth_api.rs  lib.rs  policy.rs
crates/server/tests/: api_pipeline.rs
crates/storage/: Cargo.toml
crates/storage/src/: audit.rs  document.rs  engine.rs  extract.rs  index.rs  lib.rs  writer.rs
crates/types/: Cargo.toml
crates/types/src/: audit.rs  config.rs  error.rs  lib.rs  pagination.rs  query.rs
