[package]
name = "forge-auth"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PASETO v4 authentication for ForgeDB (planned for v0.2+)"

[dependencies]
forge-types = { workspace = true }
pasetors = { workspace = true }
axum = "0.8"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
