[package]
name = "forge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI command implementations for ForgeDB"

[dependencies]
forge-types = { workspace = true }
forge-security = { workspace = true }
forge-storage = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
