[package]
name = "forge-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI command implementations for ForgeDB"

[dependencies]
forge-types = { workspace = true }
forge-security = { workspace = true }
forge-storage = { workspace = true }
forge-auth = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
