[package]
name = "forge-protocol"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TLS-mandatory network listener for ForgeDB"

[dependencies]
forge-types = { workspace = true }
forge-security = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
