[package]
name = "forge-query"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query engine for ForgeDB (planned for v0.2+)"

[dependencies]
forge-types = { workspace = true }
cedar-policy = { workspace = true }
serde_json = { workspace = true }
