[package]
name = "forge-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TLS configuration, certificate generation, and crypto primitives for ForgeDB"

[dependencies]
forge-types = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
