[package]
name = "forge-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/REST server for ForgeDB"

[dependencies]
axum = "0.8"
bytes = "1.5"
forge-auth.workspace = true
forge-query.workspace = true
forge-storage.workspace = true
forge-types.workspace = true
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "http1", "http2"] }
pasetors = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
