[package]
name = "forge-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Encrypted storage engine for ForgeDB"

[dependencies]
forge-types = { workspace = true }
redbx = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
