[package]
name = "forge-storage"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Encrypted storage engine for ForgeDB"

[dependencies]
forge-types = { workspace = true }
redbx = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bytes = "1.5"
tokio = { workspace = true }
rmp = "0.8.15"

[dev-dependencies]
serde_json.workspace = true
tempfile = { workspace = true }
