[package]
name = "forge-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, error definitions, and configuration for ForgeDB"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
redbx = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
