[package]
name = "forge-types"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, error definitions, and configuration for ForgeDB"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
redbx = { workspace = true }
uuid = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
toml = { workspace = true }
